minor changes to fix linting errors in HTML

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Ala Eddin Abugrara contacts such as address E-mail and phone number">
     <meta name="author" content="Ala Eddin Abugrara">
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-    <link href="https://fonts.googleapis.com/css?family=Caudex|Merriweather:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Contacts - Let's get in touch</title>
@@ -15,10 +15,12 @@
 <body>
     <header class="page-header">
         <a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
-        <p class="namelogo">
-            <span class="namelogo-name">ALA EDDIN ABUGRARA</span> <br>
-            <span class="namelogo-caption">Web-developer </span>
-        </p>
+        <a href="index.html">
+            <p class="namelogo">
+                <span class="namelogo-name">ALA EDDIN ABUGRARA</span> <br>
+                <span class="namelogo-caption">Web-developer </span>
+            </p>   
+        </a>
         <nav class="main-navigation page-header__item">
            <ul role="menubar" class="navigation-list">
               <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
@@ -40,7 +42,7 @@
     <div class="contact-container">
         <section class="contact-item">
             <h1>Contacts!</h1>
-            Alà Eddin Abugrara<br>
+            Ala Eddin Abugrara<br>
             Schleißheimer Straße 131<br>
             80797 Munich<br>
             Germany<br>
