--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Ala Eddin Abugrara contacts">
     <meta name="author" content="Ala Eddin Abugrara">
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-    <link href="https://fonts.googleapis.com/css?family=Caudex|Merriweather:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>My work</title>
@@ -15,10 +15,12 @@
 <body>
     <header class="page-header">
         <a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
-        <p class="namelogo">
-            <span class="namelogo-name">ALA EDDIN ABUGRARA</span> <br>
-            <span class="namelogo-caption">Web-developer </span>
-        </p>        
+        <a href="index.html">
+            <p class="namelogo">
+                <span class="namelogo-name">ALA EDDIN ABUGRARA</span> <br>
+                <span class="namelogo-caption">Web-developer </span>
+            </p>
+        </a>
         <nav class="main-navigation page-header__item">
            <ul role="menubar" class="navigation-list">
               <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
@@ -91,7 +93,7 @@
                 <h2>Your project</h2>
                 <p>
                     I'm eager to be part of a team which I believe is the best way to elevate my skills and becoming a better developer, 
-                    have a look at my <a href="#" target="_blank">CV</a>
+                    have a look at my <a href="files/AlaEddin-Abugrara_CV.pdf" target="_blank">CV</a>
                     for a listed and more detailed formation about my skills and experiences
                 </p>
                 <a href="contact.html" class="button">Lets get in touch</a>
