--- a/about.html
+++ b/about.html
@@ -18,12 +18,10 @@
 <body>
   <header class="page-header">
       <a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
-      <a href="index.html">
-        <p class="namelogo">
-            <span class="namelogo-name">ALA EDDIN ABUGRARA</span> <br>
+      <a href="index.html" class="namelogo">
+            <span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
             <span class="namelogo-caption">Web-developer </span>
-        </p>   
-    </a>
+        </a>
       <nav class="main-navigation page-header__item">
           <ul role="menubar" class="navigation-list">
             <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
