--- a/work.html
+++ b/work.html
@@ -15,11 +15,9 @@
 <body>
     <header class="page-header">
         <a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
-        <a href="index.html">
-            <p class="namelogo">
-                <span class="namelogo-name">ALA EDDIN ABUGRARA</span> <br>
-                <span class="namelogo-caption">Web-developer </span>
-            </p>
+        <a href="index.html" class="namelogo">
+            <span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
+            <span class="namelogo-caption">Web-developer </span>
         </a>
         <nav class="main-navigation page-header__item">
            <ul role="menubar" class="navigation-list">
