--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
     <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.production.css">
     <title>My work</title>
 </head>
 <body>
@@ -91,7 +91,7 @@
                 <h2>Your project</h2>
                 <p>
                     I'm eager to be part of a team which I believe is the best way to elevate my skills and becoming a better developer, 
-                    have a look at my <a href="files/AlaEddin-Abugrara_CV.pdf" target="_blank">CV</a>
+                    have a look at my <a href="#" target="_blank">CV</a>
                     for a listed and more detailed formation about my skills and experiences
                 </p>
                 <a href="contact.html" class="button">Lets get in touch</a>
