--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
     <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.production.css">
     <title>Ala Eddin Abugrara - web developer</title>
 </head>
 <body>
