edit and shorten the about and index page content

--- a/about.html
+++ b/about.html
@@ -42,29 +42,24 @@
   </header>
   <div class="about-container">
     <h1 class="about-container__item">About me</h1>
-    <h2 class="about-container__item title">My name is Aladin and Lorem ipsum dolor sit.</h2>
-    <p class="about-container__item">
-        I was born in Tripoli Libya, after finishing high school I moved to Italy where I studied Political Sciences. 
-        There I met my two great loves: my amazing wife and music. I started studying music in a renowned school in Bologna and 
-        continued my music studies in Paris and Barcelona, where I had the chance to play with various bands, going from 
-        Jazz to Salsa, Fusion and Hip Hop to name a few.
-    </p>
     <h2 class="about-container__item title">How I became a web developer</h2>
     <p class="about-container__item">
-        My interest in programming started a few years ago while looking at my wife coding. I wanted to understand what was that 
-        weird looking screen with opened terminals and lines of, what was for me then, gibberish! I decided to learn Python but then 
-        I stumbled on what would become let’s say, my third love, Javascript! I got immediately hooked, the more I knew the more I 
-        wanted to know. It was like learning to play music all over again.
+        My interest in programming started a few years back while looking at my wife coding. 
+        I wanted to understand what was that weird looking screen with open terminals and lines of, 
+        what was for me then, gibberish! 
     </p>
     <p class="about-container__item">
-        I started to practice this new skill to get my feet wet. As you may assume, I went through numerous courses on the main learning 
-        portals, cementing my knowledge of HTML, CSS, Javascript and the respective frameworks and libraries. I also took my first peek 
-        at back-end technologies (because let’s be honest, there is where the magic start to happen) with the goal of becoming a 
-        MERN stack developer. 
+        I started to learn Python but then I stumbled on Javascript! I got immediately hooked, 
+        the more I knew the more I wanted to know. It was like learning to play music all over again. 
     </p>
     <p class="about-container__item">
-        Looking back to all that SASS, Bootstrap, jQuery, React, Node, Express, Mongo and whatnot I’m feeling my feet getting wet, yes, 
-        but also standing at the edge of an ocean and I can't wait to go sailing!
+        I went through numerous courses on-line cementing my knowledge of HTML, CSS, Javascript and 
+        the respective frameworks and libraries. I also took my first peek at back-end technologies 
+        (because let’s be honest, there is where the magic start to happen) with the goal of becoming a MERN stack developer.
+    </p>
+    <p class="about-container__item">
+        Looking back to all that SASS, Bootstrap, jQuery, React, Node, Express, Mongo 
+        and whatnot I feel my feet getting wet, but also standing at the edge of an ocean and I am going sailing!
     </p>
     
   <div class="front-end-skill about-container__item">
