changes in media queries

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <div class="profile-description">
             <h1>Hello World!</h1>
             <p>
-                My name is Alà Eddin, I was bor in Tripoli Libya, <br>
+                My name is Alà Eddin,
+                I was bor in Tripoli Libya. <br>
                 I am a junior <span class="B-Btext"> &nbsp;&lt;web&gt;&nbsp;</span> with a background 
                 in Political sciences and music, currently based in Munich
             </p>
