correct a typo in index page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h1>Hello World!</h1>
             <p>
                 My name is Alà Eddin,
-                I was bor in Tripoli Libya. <br>
+                I was born in Tripoli Libya. <br>
                 I am a junior <span class="B-Btext"> &nbsp;&lt;web&gt;&nbsp;</span> with a background 
                 in Political sciences and music, currently based in Munich
             </p>
