add divs in contact to separate each field

--- a/contact.html
+++ b/contact.html
@@ -50,16 +50,22 @@
             Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br><br>
             <a href="mailto:alaeddin.abugrara@gmail.com" class="button">Contact me</a>
         </section>
-        <form action="#" method="post" id="contact-form" class="contact-item">
+        <form action="#" method="POST" id="contact-form" class="contact-item">
             <p>Or write me a message:</p>
-            <label class="standard-label" for="contact-email">Email:<span class="legend">(required)</span></label><br>
-            <input id="contact-email" type="email" required>
+           <div>
+                <label class="standard-label" for="contact-email">Email:<span class="legend">(required)</span></label><br>
+                <input id="contact-email" type="email" required>
+           </div>
             <br>
-            <label class="standard-label" for="contact-tel">Telephone: </label> <br>
-            <input id="contact-tel" type="tel">
-            <br><br>
-            <label class="standard-label last" for="contact-mes" >Message: <span class="legend">(required)</span> </label><br>
-            <textarea id="contact-mes" required maxlength="240" placeholder="240 characters left"></textarea>
+            <div>
+                <label class="standard-label" for="contact-tel">Telephone: </label> <br>
+                <input id="contact-tel" type="tel">
+            </div>
+            <br>
+           <div>
+                <label class="standard-label last" for="contact-mes" >Message: <span class="legend">(required)</span> </label><br>
+                <textarea id="contact-mes" required maxlength="240" placeholder="240 characters left &#10;messaging is under construction &#x1F3D7;"></textarea>
+           </div>
             <br>
             <input type="submit" value="Send message" class="button">
         </form>
@@ -70,5 +76,6 @@
         <a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter Logo"></a>
         <a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn Logo"></a>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
