add the new 'pokedex js app' into work.html page list of projects

--- a/work.html
+++ b/work.html
@@ -44,23 +44,23 @@
                 <h2>My Portfolio</h2>
                 <p>
                     Yes, the very one you're looking at! <br>
-                    I wrote from scratch this web site, implementing various skills I gained like CSS processors, SEO optimization, HTML semantics and 
-                    mobile responsiveness have a look at the code for more details 
+                    I wrote from scratch this web site, implementing various skills I gained like CSS processors, SEO optimization, HTML semantics and
+                    mobile responsiveness have a look at the code for more details
                 </p>
                 <a href="https://github.com/Funkateer/website-portfolio" target="_blank">See project on GitHub</a>
             </div>
             <div class="project-list__item">
                 <h2>RGB Color guessing game</h2>
                 <p>
-                    I used vanilla Javascript to build a game where you guess the color of random RGB value between 3 or 9 colors whether 
-                    playing in easy or hard mode, plus a side page where you can add RGB value and look at the corresponding color 
+                    I used vanilla Javascript to build a game where you guess the color of random RGB value between 3 or 9 colors whether
+                    playing in easy or hard mode, plus a side page where you can add RGB value and look at the corresponding color
                 </p>
                 <a href="https://github.com/Funkateer/colorGame" target="_blank">See project on GitHub</a>
             </div>
             <div class="project-list__item">
                 <h2>Circles</h2>
                 <p>
-                    A simple yet fun app where each key of the keyboard generate a random colored expanding dot on the screen and a sound, 
+                    A simple yet fun app where each key of the keyboard generate a random colored expanding dot on the screen and a sound,
                     I used two libraries paper-full for the shapes and howler for sound effects
                 </p>
                 <a href="https://github.com/Funkateer/circles" target="_blank">See project on GitHub</a>
@@ -81,16 +81,23 @@
                 <a href="#" target="_blank">See project on GitHub</a>
             </div>
             <div class="project-list__item">
+                <h2>Simple JS Pokedex-app</h2>
+                <p>
+                    With help of APIs I used vanilla Javascript to fetch and display details about pokemons in a simple internet app
+                </p>
+                <a href="https://funkateer.github.io/simple-js-app" target="_blank">See project on GitHub</a>
+            </div>
+            <div class="project-list__item">
                 <h2>Movies database search</h2>
                 <p>
-                    An app that gives information about movies searched using any word using API's
+                    An app that search and retrieves information about vast library of movies using omdb APIs
                 </p>
                 <a href="https://github.com/Funkateer/Movie-Search-App" target="_blank">See project on GitHub</a>
             </div>
             <div class="project-list__item">
                 <h2>Your project</h2>
                 <p>
-                    I'm eager to be part of a team which I believe is the best way to elevate my skills and becoming a better developer, 
+                    I'm eager to be part of a developers team which I believe is the best way to elevate my skills and becoming a better developer,
                     have a look at my <a href="#" target="_blank">CV</a>
                     for a listed and more detailed formation about my skills and experiences
                 </p>
