add minified js and css files for better loading speed to all pages, change the width of about page in mobile was wider as well as the font size in mobile size for better readability

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
     <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.production.css">
+    <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
     <title>Contacts - Let's get in touch</title>
 </head>
 <body>
@@ -76,6 +76,6 @@
         <a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter Logo"></a>
         <a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn Logo"></a>
     </footer>
-    <script src="js/scripts.js"></script>
+    <script src="dist/js/scripts.min.js"></script>
 </body>
 </html>
