--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
     <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.production.css">
+    <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
     <title>Ala Eddin Abugrara - web developer</title>
 </head>
 <body>
@@ -44,7 +44,7 @@
             <p>
                 My name is Alà Eddin,
                 I was born in Tripoli Libya. <br>
-                I am a junior <span class="B-Btext"> &nbsp;&lt;web&gt;&nbsp;</span> with a background 
+                I am a junior <span class="B-Btext"> &nbsp;&lt;web&gt;&nbsp;</span> with a background
                 in Political sciences and music, currently based in Munich
             </p>
             <a href="work.html">Check out some of my code</a>
