--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
     <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.production.css">
+    <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
     <title>My work</title>
 </head>
 <body>
@@ -83,9 +83,10 @@
             <div class="project-list__item">
                 <h2>Simple JS Pokedex-app</h2>
                 <p>
-                    With help of APIs I used vanilla Javascript to fetch and display details about pokemons in a simple internet app
+                    In this app with help of APIs I used vanilla Javascript to fetch and display details about pokemons, I also made a clone where all the Javascript logic was replaced by jQuery! <br>
+                    have a look
                 </p>
-                <a href="https://funkateer.github.io/simple-js-app" target="_blank">See project on GitHub</a>
+                <a href="https://funkateer.github.io/Pokedex-simple-js-app" target="_blank">See project on GitHub</a>
             </div>
             <div class="project-list__item">
                 <h2>Movies database search</h2>
