--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
     <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.production.css">
+    <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/TweenMax-latest-beta.js?v=333"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="js/svgAnimation.js"></script>
+    <script src="dist/js/svgAnimation.min.js"></script>
     <title>About me</title>
 </head>
 <body>
