add 3 new projects to the work html file, add screenshots of the deployed projects add more stylings and overall cleanings

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</nav>
 	</header>
 	<main class="profile-container">
-		<img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait">
+		<a href="about.html"><img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait"></a>
 		<div class="profile-description">
 			<h1>Hello World!</h1>
 			<p>
