--- a/work.html
+++ b/work.html
@@ -41,60 +41,102 @@
 		<h1>Work</h1>
 		<div class="project-list">
 			<div class="project-list__item">
+				<img src="img/website-portfolio-poster.png" class="project-list__img" alt="picture illustrates the website-portfolio project">
 				<h2>My Portfolio</h2>
 				<p>
 					Yes, the very one you're looking at! <br>
 					I wrote from scratch this web site, implementing various skills I gained like CSS processors, SEO optimization, HTML semantics and
 					mobile responsiveness have a look at the code for more details
 				</p>
-				<a href="https://github.com/Funkateer/website-portfolio" target="_blank">See project on GitHub</a>
+				<a class="button" href="https://github.com/Funkateer/website-portfolio" target="_blank">Code</a>
 			</div>
+
 			<div class="project-list__item">
-				<h2>RGB Color guessing game</h2>
+				<img src="img/Cineteca-poster.png" class="project-list__img" alt="picture illustrates the Cineteca project">
+				<h2>Cineteca app a RESTful API</h2>
 				<p>
-					I used vanilla Javascript to build a game where you guess the color of random RGB value between 3 or 9 colors whether
-					playing in easy or hard mode, plus a side page where you can add RGB value and look at the corresponding color
+					A complete web app that allows users to create their personal profile, search and save info on movies.
+					Server-side created with Node.js, uses custom made RESTful API. Client-side created using REACT and Bootstrap.
 				</p>
-				<a href="https://github.com/Funkateer/colorGame" target="_blank">See project on GitHub</a>
+				<a class="button" href="https://cineteca.herokuapp.com/" target="_blank">Project</a>
+				<a class="button" href="https://github.com/Funkateer/movie_api" target="_blank">Code</a>
 			</div>
+
 			<div class="project-list__item">
-				<h2>Circles</h2>
+				<img src="img/quiz-app-poster.png" class="project-list__img" alt="picture illustrates the website-portfolio project">
+				<h2>Quiz app</h2>
 				<p>
-					A simple yet fun app where each key of the keyboard generate a random colored expanding dot on the screen and a sound,
-					I used two libraries paper-full for the shapes and howler for sound effects
+					Quiz app built using Angular Js and Angular <a href="https://material.angular.io/">Material</a> for the stylings
 				</p>
-				<a href="https://github.com/Funkateer/circles" target="_blank">See project on GitHub</a>
+				<a class="button" href="https://funkateer.github.io/quiz-app/welcome" target="_blank">Project</a>
+				<a class="button" href="https://github.com/Funkateer/quiz-app" target="_blank">Code</a>
 			</div>
+
 			<div class="project-list__item">
-				<h2>Todo list app</h2>
+				<img src="img/toVue-list-poster.png" class="project-list__img" alt="picture illustrates the website-portfolio project">
+				<h2>ToVue list</h2>
 				<p>
-					The todo list using jQuery, the inevitable! <br>
+					A todo list using the super awesome Vue framework and <a href="https://material.angular.io/">Material</a> for the stylings
+					have a look ..
 				</p>
-				<a href="https://github.com/Funkateer/todoList" target="_blank">See project on GitHub</a>
+				<a class="button" href="https://funkateer.github.io/toVue-list/" target="_blank">Project</a>
+				<a class="button" href="https://github.com/Funkateer/toVue-list" target="_blank">Code</a>
 			</div>
+
 			<div class="project-list__item">
-				<h2>Camping ground rating app </h2>
-				<p>
-					Fully functional front and back-end app I used Node with Express and mongoose for the server side and Mongo db for database
-					among other libraries
-				</p>
-				<a href="#" target="_blank">See project on GitHub</a>
-			</div>
-			<div class="project-list__item">
+				<img src="img/Pokemon-simple-js-app-poster.png" class="project-list__img" alt="picture illustrates the Pokemon simple-js app project">
 				<h2>Simple JS Pokedex-app</h2>
 				<p>
 					In this app with help of APIs I used vanilla Javascript to fetch and display details about pokemons, I also made a clone where all the Javascript logic was replaced by jQuery! <br>
 					have a look
 				</p>
-				<a href="https://funkateer.github.io/Pokedex-simple-js-app" target="_blank">See project on GitHub</a>
+				<a class="button" href="https://funkateer.github.io/Pokedex-simple-js-app/" target="_blank">Project</a>
+				<a class="button" href="https://github.com/Funkateer/Pokedex-simple-js-app" target="_blank">JS Code</a>
+				<a class="button" href="https://github.com/Funkateer/Pokedex-jQuery-app" target="_blank">jQuery Code</a>
 			</div>
+
 			<div class="project-list__item">
-				<h2>Movies database search</h2>
+				<img src="img/colorGame-poster.png" class="project-list__img" alt="picture illustrates the color game project">
+				<h2>RGB Color guessing game</h2>
 				<p>
-					An app that search and retrieves information about vast library of movies using omdb APIs
+					I used vanilla Javascript to build a game where you guess the color of random RGB value between 3 or 9 colors whether
+					playing in easy or hard mode, plus a side page where you can add RGB value and look at the corresponding color
 				</p>
-				<a href="https://github.com/Funkateer/Movie-Search-App" target="_blank">See project on GitHub</a>
+				<a class="button" href=" https://funkateer.github.io/colorGame" target="_blank">Project</a>
+				<a class="button" href="https://github.com/Funkateer/colorGame" target="_blank">Code</a>
 			</div>
+
+			<div class="project-list__item">
+				<img src="img/circles-poster.png" class="project-list__img" alt="picture illustrates the circles game project">
+				<h2>Circles</h2>
+				<p>
+					A simple but fun app where each key of the keyboard generate a random colored expanding dot on the screen and a sound,
+					I used two libraries paper-full for the shapes and howler for sound effects
+				</p>
+				<a class="button" href="https://funkateer.github.io/circles" target="_blank">Code</a>
+				<a class="button" href="https://github.com/Funkateer/circles" target="_blank">Project</a>
+			</div>
+
+			<div class="project-list__item">
+				<img src="img/todoList-poster.png" class="project-list__img" alt="picture illustrates the todo list project">
+				<h2>Todo list app</h2>
+				<p>
+					Yet another todo list this time I'm using jQuery <br>
+				</p>
+				<a class="button" href="https://funkateer.github.io/todoList/" target="_blank">Project</a>
+				<a class="button" href="https://github.com/Funkateer/todoList" target="_blank">Code</a>
+			</div>
+
+			<!-- <div class="project-list__item">
+				<img src="img/camping-ground-poster.png" class="project-list__img" alt="picture illustrates the Camping ground "yelp" project">
+				<h2>Camping ground rating app </h2>
+				<p>
+					Fully functional front and back-end app I used Node with Express and mongoose for the server side and Mongo db for database
+					among other libraries
+				</p>
+				<a href="#" target="_blank">See project code on GitHub</a>
+			</div> -->
+
 			<div class="project-list__item">
 				<h2>Your project</h2>
 				<p>
@@ -104,8 +146,8 @@
 				</p>
 				<a href="contact.html" class="button">Lets get in touch</a>
 			</div>
-		</div>
-	</div>
+		</div> <!--project list-->
+	</div> <!--work container-->
 	<footer>
 		<p>Find me on</p>
 		<a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github"></a>
