add tech icon to About page

--- a/about.html
+++ b/about.html
@@ -9,7 +9,9 @@
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-	<link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+
 	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/TweenMax-latest-beta.js?v=333"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src="dist/js/svgAnimation.min.js"></script>
@@ -114,7 +116,153 @@
 				</tr>
 			</tbody>
 		</table>
-  </div>
+	</div>
+
+  <div class="tech-icon">
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/javascript.svg" alt="mgs">
+      <span class="tooltip-text">JavaScript</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/html5.svg" alt="mgs">
+      <span class="tooltip-text">HTML5</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/css3.svg" alt="mgs">
+      <span class="tooltip-text">CSS</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/jquery.svg" alt="mgs">
+      <span class="tooltip-text">jQuery</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/angular.svg" alt="mgs">
+      <span class="tooltip-text">Angular</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/react.svg" alt="mgs">
+      <span class="tooltip-text">React</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/vue.svg" alt="mgs">
+      <span class="tooltip-text">Vue</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/redux.svg" alt="mgs">
+      <span class="tooltip-text">Redux</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/bootstrap4.svg" alt="mgs">
+      <span class="tooltip-text">Bootstrap 4</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/sass.svg" alt="mgs">
+      <span class="tooltip-text">SASS</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/es6.svg" alt="mgs">
+      <span class="tooltip-text">ES6</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/typescript.svg" alt="mgs">
+      <span class="tooltip-text">TypeScript</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/nodejs.svg" alt="mgs">
+      <span class="tooltip-text">Node.js</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/mongo-db.svg" alt="mgs">
+      <span class="tooltip-text">Mongo DB</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/mysql.svg" alt="mgs">
+      <span class="tooltip-text">mySQL</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/postgresql.svg" alt="mgs">
+
+      <span class="tooltip-text">Postgre</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/heroku.svg" alt="mgs">
+      <span class="tooltip-text">Heroku</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/jest.svg" alt="mgs">
+      <span class="tooltip-text">jest</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/puppeteer.svg" alt="mgs">
+      <span class="tooltip-text">Puppeteer</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/cucumber.svg" alt="mgs">
+      <span class="tooltip-text">Cucumber</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/git.svg" alt="mgs">
+      <span class="tooltip-text">Git</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/github.svg" alt="mgs">
+      <span class="tooltip-text">Github</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/postman.svg" alt="mgs">
+      <span class="tooltip-text">Postman</span>
+    </div>
+
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/sketch.svg" alt="mgs">
+      <span class="tooltip-text">Sketch</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/adobe-xd.svg" alt="mgs">
+      <span class="tooltip-text"> Adobe XD</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/slack.svg" alt="mgs">
+      <span class="tooltip-text">Slack</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/trello.svg" alt="mgs">
+      <span class="tooltip-text">Trello</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/VSC.svg" alt="mgs">
+      <span class="tooltip-text">Visual Studio Code</span>
+    </div>
+
+  </div> <!--tech-icone-->
+
 	<a href="#" class="button about-container__item centerBtn" download>Download my CV</a><br>
   </div> <!-- about-container-->
 
