--- a/work.html
+++ b/work.html
@@ -8,7 +8,9 @@
 	<meta name="author" content="Ala Eddin Abugrara">
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+
 	<link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
 	<title>My work</title>
 </head>
