--- a/work.html
+++ b/work.html
@@ -8,9 +8,7 @@
 	<meta name="author" content="Ala Eddin Abugrara">
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
-	<!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> -->
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
 	<title>My work</title>
 </head>
@@ -65,7 +63,18 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/quiz-app-poster.png" class="project-list__img" alt="picture illustrates the website-portfolio project">
+				<img src="img/meetup-poster.png" class="project-list__img" alt="picture illustrates the Meetup app built with React">
+				<h2>Meetup app </h2>
+				<p>
+					A serverless, progressive web application (PWA) built with React using a test-driven development TDD technique.
+					The application uses the Meetup API to fetch upcoming events for a selected city.
+				</p>
+				<a class="button" href="https://funkateer.github.io/meetup/" target="_blank">Project</a>
+				<a class="button" href="https://github.com/Funkateer/meetup" target="_blank">Code</a>
+			</div>
+
+			<div class="project-list__item">
+				<img src="img/quiz-app-poster.png" class="project-list__img" alt="picture illustrates the quiz app built with Angular">
 				<h2>Quiz app</h2>
 				<p>
 					Quiz app built using Angular Js and Angular <a href="https://material.angular.io/">Material</a> for the stylings
@@ -75,7 +84,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/toVue-list-poster.png" class="project-list__img" alt="picture illustrates the website-portfolio project">
+				<img src="img/toVue-list-poster.png" class="project-list__img" alt="picture illustrates the todo list app built with Vue">
 				<h2>ToVue list</h2>
 				<p>
 					A todo list using the super awesome Vue framework and <a href="https://material.angular.io/">Material</a> for the stylings
