position contact text and form in the middle of the page, add alt description to tech icons

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 	</header>
 	<div class="contact-container">
 		<section class="contact-item">
-			<h1>Contacts!</h1>
+			<h1>My contacts!</h1>
 			Ala Eddin Abugrara<br>
 			Schleißheimer Straße 131<br>
 			80797 Munich<br>
