--- a/about.html
+++ b/about.html
@@ -118,144 +118,144 @@
 
   <div class="tech-icon">
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/javascript.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/javascript.svg" alt="JavaScript icon">
       <span class="tooltip-text">JavaScript</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/html5.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/html5.svg" alt="HTML5 icon">
       <span class="tooltip-text">HTML5</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/css3.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/css3.svg" alt="CSS icon">
       <span class="tooltip-text">CSS</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/jquery.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/jquery.svg" alt="jQuery icon">
       <span class="tooltip-text">jQuery</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/angular.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/angular.svg" alt="Angular icon">
       <span class="tooltip-text">Angular</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/react.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/react.svg" alt="React icon">
       <span class="tooltip-text">React</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/vue.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/vue.svg" alt="Vue icon">
       <span class="tooltip-text">Vue</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/redux.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/redux.svg" alt="Redux icon">
       <span class="tooltip-text">Redux</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/bootstrap4.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/bootstrap4.svg" alt="Bootstrap icon">
       <span class="tooltip-text">Bootstrap 4</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/sass.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/sass.svg" alt="SASS icon">
       <span class="tooltip-text">SASS</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/es6.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/es6.svg" alt="ES6 icon">
       <span class="tooltip-text">ES6</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/typescript.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/typescript.svg" alt="TypeScript icon">
       <span class="tooltip-text">TypeScript</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/nodejs.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/nodejs.svg" alt="Node.js icon">
       <span class="tooltip-text">Node.js</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/mongo-db.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/mongo-db.svg" alt="Mongo DB icon">
       <span class="tooltip-text">Mongo-DB</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/mysql.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/mysql.svg" alt="MySQL icon">
       <span class="tooltip-text">mySQL</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/postgresql.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/postgresql.svg" alt="Postgre icon">
 
       <span class="tooltip-text">Postgre</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/heroku.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/heroku.svg" alt="Heroku icon">
       <span class="tooltip-text">Heroku</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/jest.svg" alt="mgs">
-      <span class="tooltip-text">jest</span>
+      <img class="tech-icon__img" src="img/jest.svg" alt="Jest icon">
+      <span class="tooltip-text">Jest</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/puppeteer.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/puppeteer.svg" alt="Puppeteer icon">
       <span class="tooltip-text">Puppeteer</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/cucumber.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/cucumber.svg" alt="Cucumber icon">
       <span class="tooltip-text">Cucumber</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/git.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/git.svg" alt="Git icon">
       <span class="tooltip-text">Git</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/github.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/github.svg" alt="Github icon">
       <span class="tooltip-text">Github</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/postman.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/postman.svg" alt="Postman icon">
       <span class="tooltip-text">Postman</span>
     </div>
 
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/sketch.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/sketch.svg" alt="Sketch icon">
       <span class="tooltip-text">Sketch</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/adobe-xd.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/adobe-xd.svg" alt="Adobe XD icon">
       <span class="tooltip-text"> Adobe XD</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/slack.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/slack.svg" alt="Slack icon">
       <span class="tooltip-text">Slack</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/trello.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/trello.svg" alt="Trello icon">
       <span class="tooltip-text">Trello</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/VSC.svg" alt="mgs">
+      <img class="tech-icon__img" src="img/vsc.svg" alt="Visual Studio Code icon">
       <span class="tooltip-text">VS Code</span>
     </div>
 
