--- a/work.html
+++ b/work.html
@@ -124,8 +124,8 @@
 					A simple but fun app where each key of the keyboard generate a random colored expanding dot on the screen and a sound,
 					I used two libraries paper-full for the shapes and howler for sound effects
 				</p>
-				<a class="button" href="https://funkateer.github.io/circles" target="_blank">Code</a>
-				<a class="button" href="https://github.com/Funkateer/circles" target="_blank">Project</a>
+				<a class="button" href="https://funkateer.github.io/circles" target="_blank">Project</a>
+				<a class="button" href="https://github.com/Funkateer/circles" target="_blank">Code</a>
 			</div>
 
 			<div class="project-list__item">
